# P2PChat

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml
src/: chatclient.cpp  chatclient.h  chatmodel.cpp  chatmodel.h  chatserver.cpp  chatserver.h  main.cpp
